# Ketamine

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  TUTORIAL.md
.github/workflows/: build.yml
benchmarks/: README.md  bubble_sort.kt  fibonacci.kt  prime_sieve.kt
docs/: COMPILER_INTERNALS.md  FFI_GUIDE.md  GETTING_STARTED.md  LANGUAGE_REFERENCE.md  SECURITY.md  index.html
docs/compiler/: build.md  flags.md  internals.md
docs/examples/: tutorials.md
docs/language/: borrowing.md  error_handling.md  generics.md  syntax.md  traits.md  types.md
docs/playground/: index.html
docs/stdlib/: collections.md  core.md  io.md
examples/: 00_hello.kt  01_variables.kt  02_functions.kt  03_if_while.kt  04_structs.kt  05_enums.kt  06_generics.kt  07_traits.kt  08_stdlib.kt  09_http_server.kt  10_game.kt  concurrent_worker.kt  hello.kt  http_server.kt  mandelbrot.kt  multiplayer_arena.kt  p2p_mesh.kt  raytracer.kt  rest_api.kt  tls_server.kt  websocket_server.kt
pycompiler/: codegen_go.py  codegen_js.py  codegen_llvm.py  codegen_wasm.py  ffi.py  ketc.py  lexer.py  obfuscator.py  parser.py  security.py  semantic.py
registry/: index.json
scripts/: install.sh  test_all.sh  test_examples.sh
src/: arena.c  borrow.c  build_system.c  closures.c  codegen.c  const_generics.c  coverage.c  diagnostics.c  docgen.c  dwarf.c  ffi_ownership.c  ffi_zero_copy.c  format.c  forth.c  ir.c  ir_optimize.c  jit_layout.c  lexer.c  logging.c  lsp.c  macros.c  main.c  monomorph.c  monomorph_dispatch.c  native.c  package.c  parallel.c  parser.c  profiler.c  registry.c  repl.c  runtime.c  symbol_table.c  test_framework.c  trait_associated.c  trait_resolve.c  typecheck.c
src/include/: arena.h  borrow.h  build_system.h  closures.h  codegen.h  const_generics.h  coverage.h  dwarf.h  ffi_ownership.h  ffi_zero_copy.h  jit_layout.h  lexer.h  lsp.h  macros.h  monomorph.h  monomorph_dispatch.h  package.h  parallel.h  parser.h  profiler.h  registry.h  runtime.h  test_framework.h  trait_associated.h  trait_resolve.h  typecheck.h  types.h
stdlib/: collections.kt  core.kt  crypto.kt  io.kt  math.kt  net.kt  os.kt  strings.kt
tests/: test_borrowcheck.c  test_codegen.c  test_lexer.c  test_lsp.c  test_optimizer.c  test_package.c  test_parser.c  test_typecheck.c
tests/codegen/: arithmetic.kt  comparison_chain.kt  fibonacci.kt  if_else_expr.kt  multiple_functions.kt  print_hello.kt  while_sum.kt
tests/integration/: test_compile.c
tests/parser/: closure.kt  comments.kt  enum_decl.kt  for_loop.kt  function_with_params.kt  generic_fn.kt  generic_struct.kt  if_else.kt  impl_block.kt  match_stmt.kt  pipe_forward.kt  struct_decl.kt  trait_decl.kt  trait_impl.kt  type_alias.kt  variables.kt
tests/runner/: test_runner.c
tests/typecheck/: binary_ops.kt  cast.kt  comparisons.kt  control_flow.kt  function_call.kt  literal_types.kt  method_call.kt  nested_scopes.kt  recursion.kt  struct_init.kt  tuple.kt  unary_ops.kt
vscode-ketamine/: package.json
vscode-ketamine/src/: extension.js
vscode-ketamine/syntaxes/: ketamine.tmLanguage.json
